# c-webserver

./: CMakeLists.txt  Readme.md  host.c  main.c  model.h  socket_helper.c  socket_helper.h
src/: CMakeLists.txt  http_handler.c  http_handler.h  main.c  model.c  tiny.c  tiny.h
test/: CMakeLists.txt  test.c  test.sh  test_clienterror.c  test_helper.c  test_model.c
